--- a/stylesheet.less
+++ b/stylesheet.less
@@ -45,28 +45,6 @@
 // Site Styles
 // ------------------------------
 
-// :(
-.droppable-highlight {
-    z-index: 10006;
-
-    &.drop-top {
-        border-top: 15px solid #009488;
-    }
-
-    &.drop-bottom {
-        border-bottom: 15px solid #009488;
-    }
-
-    &.drop-left {
-        border-left: 15px solid #009488;
-    }
-
-    &.drop-right {
-        border-right: 15px solid #009488;
-    }
-}
-
-
 
 body.open {
     position: fixed;
@@ -91,7 +69,7 @@ body.open {
 // Main
 .main-content {
     position: relative;
-    z-index: 10003;
+    z-index: 10000;
     padding: 30px 0 100px;
 
      &:before {
@@ -143,7 +121,7 @@ body.open {
     left: 0;
     right: 0;
     top: 0;
-    z-index: 10004;
+    z-index: 10001;
     width: 100%;
     padding: 30px 0;
 
